{{$NEXT}}

- Added the GeoIP2::Database::Reader class. This provides an API for looking
  up data in a GeoIP2 database, as opposed to making a web service call.

- Switched the version number scheme to X.YYYZZZ.


0.0302   2013-06-20

- Make the license section of the docs match the LICENSE file in the repo. We
  meant to use "same as Perl 5" everywhere.


0.0301   2013-06-10

- The first official beta release of this API.


0.0300   2013-05-23

- Allow IPv6 addresses to be passed to the GeoIP2::WebService::Client class's
  methods.

- We now support more languages. The new languages are de, es, fr, and pt-BR.

- Postal code data is now returned as a separate top-level object. We now
  provide a GeoIP2::Record::Postal class for this data.

- The REST API returns a record with data about your account. There is a new
  GeoIP2::Record::MaxMind class for this data.

- Fixed bug in the City & CityISPOrg classes. Their subdivions() method was
  not working.

- Type constraint errors are now thrown as GeoIP2::Type::Error objects.


0.0200   2013-05-13

- Replaced all uses of Webservice with WebService.


0.0100   2013-05-13

- First release upon an unsuspecting world.