@@ -8,6 +8,7 @@ use warnings;
 use Data::Validate::IP 0.19 qw( is_public_ipv4 is_public_ipv6 );
 use GeoIP2::Error::Generic;
 use GeoIP2::Error::HTTP;
+use GeoIP2::Error::IPAddressNotFound;
 use GeoIP2::Error::WebService;
 use GeoIP2::Model::City;
 use GeoIP2::Model::CityISPOrg;
@@ -167,7 +168,7 @@ sub _response_for {
     }
     else {
         # all other error codes throw an exception
-        $self->_handle_error_status( $response, $uri );
+        $self->_handle_error_status( $response, $uri, $p{ip} );
     }
 }
 
@@ -194,11 +195,12 @@ sub _handle_error_status {
     my $self     = shift;
     my $response = shift;
     my $uri      = shift;
+    my $ip       = shift;
 
     my $status = $response->code();
 
     if ( $status =~ /^4/ ) {
-        $self->_handle_4xx_status( $response, $status, $uri );
+        $self->_handle_4xx_status( $response, $status, $uri, $ip );
     }
     elsif ( $status =~ /^5/ ) {
         $self->_handle_5xx_status( $response, $status, $uri );
@@ -213,6 +215,14 @@ sub _handle_4xx_status {
     my $response = shift;
     my $status   = shift;
     my $uri      = shift;
+    my $ip       = shift;
+
+    if ( $status == 404 ) {
+        GeoIP2::Error::IPAddressNotFound->throw(
+            message    => "No record found for IP address $ip",
+            ip_address => $ip,
+        );
+    }
 
     my $content = $response->decoded_content();
 
